Working integrating search card info